--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "fastify": "3.24.1",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.20.5"
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.4.18",
