--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write \"src/**/*.{ts,js}\"",
-    "swagger:generate": "openapi-generator-cli generate -i \"http://localhost:8080/swagger\" -g typescript-fetch -o  ./swagger"
+    "swagger:generate": "openapi-generator-cli generate -i \"../server/internal/docs/swagger.json\" -g typescript-fetch -o  ./swagger"
   },
   "dependencies": {
     "@emotion/cache": "^11.6.0",
@@ -15,6 +15,7 @@
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.2",
+    "@tinkoff/utils": "^2.2.1",
     "cross-env": "7.0.3",
     "fastify": "3.24.1",
     "next": "12.0.4",
