--- a/client/src/shared/mock-tasks.json
+++ b/client/src/shared/mock-tasks.json
@@ -2,26 +2,31 @@
   {
     "title": "Some Title 1",
     "icon": "0",
-    "description": "Some Description 1"
+    "description": "Some Description 1",
+    "estimated": "3600"
   },
   {
     "title": "Some Title 2",
     "icon": "1",
-    "description": "Some Description 2"
+    "description": "Some Description 2",
+    "estimated": "3600"
   },
   {
     "title": "Some Title 3",
     "icon": "1",
-    "description": "Some Description 3"
+    "description": "Some Description 3",
+    "estimated": "3600"
   },
   {
     "title": "Some Title 4",
     "icon": "0",
-    "description": "Some Description 4"
+    "description": "Some Description 4",
+    "estimated": "3600"
   },
   {
     "title": "Some Title 5",
     "icon": "1",
-    "description": "Some Description 5"
+    "description": "Some Description 5",
+    "estimated": "3600"
   }
 ]
